# low-level-programming

./: .gitignore  README.md
Labs/1/: Задания для ЛР1.docx
Labs/2/: Методичка_ЛР2.docx
Labs/3/: Методичка_ЛР3.docx
Labs/4/: Методичка_ЛР4.docx
Labs/4/Lin/: easy_1.1  easy_1.2  easy_1.2.elf  easy_1.3  easy_1.3.elf  easy_2.1  easy_2.1.elf  easy_2.2  easy_2.2.elf  hard  medium_1.1  medium_1.1.elf  medium_1.2  medium_1.2.elf  medium_2.1  medium_2.1.elf  medium_2.2  medium_2.2.elf  readme_hard.txt
Labs/4/easy/Lin/: easy_1.1.elf  easy_1.2.elf  easy_1.3.elf  easy_2.1.elf  easy_2.2.elf
Labs/4/medium/Lin/: medium_1.1.elf  medium_1.2.elf  medium_2.1.elf  medium_2.2.elf
Labs/5/: hard  ЛР5.docx
Lectures/1.Introduction/: Lecture1.pptx
Lectures/1.Introduction/examples/asm/: 1_adressing.asm  2_mul_div.asm  3_conditionals.asm  4_input_sum.asm  4_strlen.asm  5_radix_print.asm
Lectures/1.Introduction/examples/c/: CMakeLists.txt  input_sum.c  input_sum_simplified.c  radix_print.c  radix_print_simplified.c  strlen.c  strlen_simplified.c
Lectures/10.CISC_RISC_ARM/: Lecture10.pptx
Lectures/10.Debugging_and_VM/: Lecture10.pptx
Lectures/10.Debugging_and_VM/examples/asm/: software_breakpoint.asm  trap_flag.asm
Lectures/10.Debugging_and_VM/examples/cpp/: sigtrap.cpp  software_breakpoint.cpp
Lectures/2.FPU_and_SIMD/: Lecture2.pptx
Lectures/2.FPU_and_SIMD/examples/asm/: 1_remainder.asm  2_precision.asm  3_hardware_exceptions.asm
Lectures/2.FPU_and_SIMD/examples/cpp/: 1_denormals.cpp  2_fpu_exceptions.cpp  3_vec_mul.cpp  3_vec_mul_intrinsics.cpp  3_vec_mul_main.cpp  CMakeLists.txt  scope_timer.cpp  scope_timer.hpp
Lectures/3.Calling_conventions/: Lecture3.pptx
Lectures/3.Calling_conventions/examples/x86-32/: Unix-cdecl.asm  Win-cdecl.asm  Win-stdcall.asm
Lectures/3.Calling_conventions/examples/x86-64/: Microsoft-x64-v2.asm  Microsoft-x64.asm  SystemV.asm
Lectures/4.Compiling_and_linking/example/: CMakeLists.txt
Lectures/4.Compiling_and_linking/example/bad_lib/: CMakeLists.txt
Lectures/4.Compiling_and_linking/example/exe/: CMakeLists.txt
Lectures/4.Compiling_and_linking/example/good_lib/: source.cpp
Lectures/4.Decompilation/: Lecture4.pptx
Lectures/5.Compiling_and_linking/: Lecture5.pptx
Lectures/5.Compiling_and_linking/example/: CMakeLists.txt
Lectures/5.Compiling_and_linking/example/bad/: CMakeLists.txt  source.cpp
Lectures/5.Compiling_and_linking/example/bad_lib/: source.cpp
Lectures/5.Compiling_and_linking/example/exe/: CMakeLists.txt  call_external_functions.cpp  main.cpp
Lectures/5.Compiling_and_linking/example/good/: CMakeLists.txt
Lectures/5.Compiling_and_linking/example/good_lib/: CMakeLists.txt
Lectures/5.Decompilation/: Lecture5.pptx  link.txt
Lectures/6.Vulnerabilities/: Lecture6.pptx  link.txt
Lectures/6.Vulnerabilities/examples/: CMakeLists.txt  README.txt  build.sh  format0.c  format1.c  format3.c  print_addresses.c  stack0.c  stack1.c  stack3.c
Lectures/7.Microarchitecture/: Lecture7.pptx
Lectures/7.Microarchitecture/examples/: CMakeLists.txt
Lectures/7.Microarchitecture/examples/1_caching/: 1_matmul.cpp  1_vector_vs_list.cpp  CMakeLists.txt
Lectures/7.Microarchitecture/examples/2_uarch/: 21_superscalar.cpp  22_false_dependency.cpp  23_speculative_execution.cpp  CMakeLists.txt
Lectures/7.Microarchitecture/examples/3_multicore/: 31_memory_reordering.cpp  32_atomics.cpp  33_false_sharing.cpp  CMakeLists.txt
Lectures/7.Microarchitecture/examples/common/: CMakeLists.txt
Lectures/7.Microarchitecture/examples/common/include/: random_utils.hpp  scope_timer.hpp
Lectures/8.IO_and_execution_modes/: Lecture8.pptx
Lectures/8.IO_and_execution_modes/examples/hardware_exceptions/: breakpoint.asm  detect_overflow_x32.asm  detect_overflow_x64.asm
Lectures/8.IO_and_execution_modes/examples/linux_syscalls/: build.sh  x86-32.asm  x86-64.asm
Lectures/8.IO_and_execution_modes/examples/paging/: CMakeLists.txt  main.cpp  scoped_timer.cpp  scoped_timer.h
Lectures/9.ARM/: Lecture9.pptx
Lectures/9.Debugging_and_VM/: Lecture9.pptx  link.txt
Lectures/9.Debugging_and_VM/examples/cpp/: CMakeLists.txt  sigtrap.cpp  trap_flag.cpp
