project(L1 C)

add_executable(input_sum input_sum.c)
add_executable(input_sum_simplified input_sum_simplified.c)
add_executable(strlen strlen.c)
add_executable(strlen_simplified strlen_simplified.c)
add_executable(radix_print radix_print.c)
add_executable(radix_print_simplified radix_print_simplified.c)